change from gcp mode to local mode